syntax = "proto3";
package msg.rsp;

import "Rsp.Error.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "RspErrorMsgProto";

option csharp_namespace = "Evelynn.Base.Response";

message RspErrorMsg {
	.rsp.ErrorField error = 1;
	int32 request_id = 2;
	bool is_last = 3;
}